@@ -160,7 +160,7 @@ main(int argc, char *argv[])
     exit(EXIT_FAILURE);
   }
 
-  if (strstr (ttfname, "ttc") != NULL)
+  if (strstr (ttfname, "ttc") != NULL || strstr (ttfname, "TTC") != NULL)
   {
     ttc = ttfLoadTTCHeader(ttfname);
 
@@ -180,7 +180,7 @@ main(int argc, char *argv[])
     exit(EXIT_FAILURE);
 
   print_prologue(dp_file);
-  if (strstr(ttfname, "ttc") != NULL)
+  if (strstr(ttfname, "ttc") != NULL || strstr(ttfname, "TTC") != NULL)
   {
     print_ttc(ttc, dp_file);
   }
@@ -216,7 +216,7 @@ main(int argc, char *argv[])
     }
   }
 
-  if (strstr(ttfname, "ttc") != NULL)
+  if (strstr(ttfname, "ttc") != NULL || strstr(ttfname, "TTC") != NULL)
   {
     ttfFreeTTCFont(ttc);
   }
